--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -31,7 +31,7 @@ keccak-hasher = "0.15.3"
 hex = "0.4.3"
 hex-literal = "0.3.4"
 futures = "0.3.17"
-ethash = { path = "../../ethash" }
+ethash = { git = "https://github.com/vovac12/ethash"}
 log = "0.4.14"
 env_logger = "0.9.0"
 sha3 = { version = "0.10.0" }
