--- a/pallets/ceres-staking/Cargo.toml
+++ b/pallets/ceres-staking/Cargo.toml
@@ -22,6 +22,7 @@ sp-core = { version = "3", default-features = false }
 sp-runtime = { version = "3", default-features = false }
 sp-std = { version = "3", default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
+technical = { path = "../technical" , default-features = false}
 hex-literal = "0.3.1"
 
 [dev-dependencies]
@@ -32,6 +33,7 @@ sp-io = { version = "3", default-features = false }
 tokens = { version = "0.4", package = "orml-tokens", default-features = false }
 pallet-balances = { version = "3" }
 permissions = { path = "../permissions" }
+technical = { path = "../technical", default-features = false }
 
 [features]
 default = ["std"]
