--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -28,6 +28,7 @@ sp-io = { version = "3", default-features = false }
 sp-runtime = { version = "3", default-features = false }
 sp-std = { version = "3", default-features = false }
 static_assertions = "1.1.0"
+hex-literal = "0.3.1"
 
 [dev-dependencies]
 serde_json = "1.0.41"
